# eigenric.github.io

./: .gitignore  .swo  .swp  404.html  CNAME  LICENSE  Makefile  Pipfile  README.md  README.rst  archives.html  atom.xml  authors.html  blog.html  categories.html  conf.py  develop_server_default.sh  index.html  nuevafunc  pelicanconf.py  publishconf.py  pyproject.toml  robots.txt  sitemap (Copia en conflicto de Ric’s MacBook Air 2025-02-21).xml  sitemap.xml  tags.html  tasks.py
2013/: index.html
2014/: index.html
2015/: index.html
2016/: index.html
2017/: index.html
2018/: index.html
2019/: index.html
2020/: index.html
2021/: index.html
2022/: index.html
2023/: index.html
archive/: index (Copia en conflicto de Ric’s MacBook Air 2025-02-21).html  index.html
blog/: RelacionFamiliaRuizFda.clp  awful-math.md  hi-pelican.md  hi-pelican.rst  ho-pelicon.md  hu-pulucun.md  index.html  jrnl-vim.md  math-is-awesome.md  math-is-awesome.rst
breaking-the-enigma-code-with-rust/: index.html
caca/: index.html
conf/: develop_server.sh  pelicanconf.py  publishconf.py
confs/: svbtleconf.py
content/: empezando-con-pelican.rst.save
drafts/: demostracion-del-lema-de-zorn-draft.html  hi-pelican.html  ho-pelicon.html  hu-pulucun.html  marcadores-de-conflicto-en-git.html  math-is-awesome.html  sincroniza-tus-tareas-con-taskwarrior.html  zorns-lemma-proof-using-category-theory.html
eulerpy-streamlining-project-euler/: index.html
extra/: .robots.txt.swp
feeds/: all.atom.xml
hi-pelican/: index.html
math-is-awesome/: index.html
me/: index.html
(+302 files in other folders)
