[tool.poetry]
name = "eigenric"
version = "0.1.0"
description = ""
authors = ["Ricardo Ruiz <ricardoruizfdez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pelican = "*"
cssmin = "*"
webassets = "*"
libsass = "*"
Markdown = "*"
typogrify = "*"
beautifulsoup4 = "*"
lxml = "*"

[tool.poetry.dev-dependencies]
invoke = "*"
livereload = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
